style(website): add footer and update style

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -1,9 +1,10 @@
 ---
-title: Welcome to Starlight
-description: Get started building your docs site with Starlight.
+title: Binsider
+description: Analyze ELF binaries like a boss.
 template: splash
+editUrl: true
 hero:
-  tagline: Congrats on setting up a new Starlight project!
+  tagline: Analyze ELF binaries like a boss.
   image:
     alt: Logo
     dark: ../../assets/binsider-logo-dark.png
@@ -13,7 +14,7 @@ hero:
       link: /guides/example/
       icon: right-arrow
       variant: primary
-    - text: Read the Starlight docs
+    - text: Read the docs
       link: 'https://starlight.astro.build'
       icon: external
 ---
