docs(website): update landing page details

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -1,23 +1,30 @@
 ---
 title: Binsider
+head:
+  - tag: title
+    content: Binsider - Analyze ELF binaries like a boss
 description: Analyze ELF binaries like a boss.
 template: splash
 editUrl: true
 hero:
-  tagline: Analyze ELF binaries like a boss.
+  tagline: Analyze ELF binaries <i>like a boss</i>.
   image:
     alt: Logo
     dark: ../../assets/binsider-logo-dark.png
     light: ../../assets/binsider-logo-light.png
   actions:
-    - text: Example Guide
-      link: /guides/example/
+    - text: Start hacking
+      link: /guides/get_started/
       icon: right-arrow
       variant: primary
-    - text: Read the docs
-      link: 'https://starlight.astro.build'
-      icon: external
+    - text: Learn more
+      link: /about/intro/
+      icon: open-book
+    - text: Get source
+      link: "https://github.com/orhun/binsider"
+      icon: github
 ---
+
 import { Card, CardGrid } from "@astrojs/starlight/components";
 
 ## Next steps
