style(website): improve the styling

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -8,10 +8,6 @@ template: splash
 editUrl: true
 hero:
   tagline: Analyze ELF binaries <i>like a boss</i>.
-  image:
-    alt: Logo
-    dark: ../../assets/binsider-logo-dark.png
-    light: ../../assets/binsider-logo-light.png
   actions:
     - text: Start hacking
       link: /guides/get_started/
@@ -21,25 +17,12 @@ hero:
       link: /about/intro/
       icon: open-book
     - text: Get source
-      link: "https://github.com/orhun/binsider"
+      link: 'https://github.com/orhun/binsider'
       icon: github
 ---
-
-import { Card, CardGrid } from "@astrojs/starlight/components";
-
-## Next steps
-
-<CardGrid stagger>
-  <Card title="Update content" icon="pencil">
-    Edit `src/content/docs/index.mdx` to see this page change.
-  </Card>
-  <Card title="Add new content" icon="add-document">
-    Add Markdown or MDX files to `src/content/docs` to create new pages.
-  </Card>
-  <Card title="Configure your site" icon="setting">
-    Edit your `sidebar` and other config in `astro.config.mjs`.
-  </Card>
-  <Card title="Read the docs" icon="open-book">
-    Learn more in [the Starlight Docs](https://starlight.astro.build/).
-  </Card>
-</CardGrid>
+<img
+  src="src/assets/binsider-general-tab.png"
+  alt="Binsider logo"
+  style="margin: 0 auto; display:block;"
+/>
+;
