chore(website): add demo image before the hero

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -17,12 +17,6 @@ hero:
       link: /about/intro/
       icon: open-book
     - text: Get source
-      link: 'https://github.com/orhun/binsider'
+      link: "https://github.com/orhun/binsider"
       icon: github
 ---
-<img
-  src="src/assets/binsider-general-tab.png"
-  alt="Binsider logo"
-  style="margin: 0 auto; display:block;"
-/>
-;
