chore(website): add text to hero

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -10,7 +10,7 @@ hero:
   tagline: Analyze ELF binaries <i>like a boss</i>.
   actions:
     - text: Start hacking
-      link: /guides/get_started/
+      link: /guides/example/
       icon: right-arrow
       variant: primary
     - text: Learn more
