docs(website): add placeholder for documentation

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -10,11 +10,11 @@ hero:
   tagline: Analyze ELF binaries <i>like a boss</i>.
   actions:
     - text: Start hacking
-      link: /guides/example/
+      link: /getting-started/
       icon: right-arrow
       variant: primary
     - text: Learn more
-      link: /about/intro/
+      link: /usage
       icon: open-book
     - text: Get source
       link: "https://github.com/orhun/binsider"
