docs(website): add complete documentation

--- a/website/src/content/docs/index.mdx
+++ b/website/src/content/docs/index.mdx
@@ -14,7 +14,7 @@ hero:
       icon: right-arrow
       variant: primary
     - text: Learn more
-      link: /usage
+      link: /usage/general-analysis/
       icon: open-book
     - text: Get source
       link: "https://github.com/orhun/binsider"
