feat(website): add video

--- a/website/src/content/docs/getting-started/index.mdx
+++ b/website/src/content/docs/getting-started/index.mdx
@@ -2,6 +2,10 @@
 title: Quickstart
 ---
 
+import VideoEmbed from '../../../components/Video.astro';
+
+<VideoEmbed />
+
 Start by [installing](/installation/crates-io) `binsider`:
 
 ```bash
@@ -41,5 +45,6 @@ It provides a Terminal User Interface ([TUI](https://en.wikipedia.org/wiki/Text-
 - [Hexdump](/usage/hexdump) for viewing the binary content.
 
 For detailed documentation on these features, please refer to the links provided above.
+
 
 Happy hacking! 💣
