docs(blog): update issue list

--- a/website/src/content/docs/blog/v0.2.0.md
+++ b/website/src/content/docs/blog/v0.2.0.md
@@ -128,6 +128,7 @@ The shared libraries in the [general analysis](/usage/general-analysis) are now 
 | [#5](https://github.com/orhun/binsider/issues/5)   | Improve the test suite                                                           | Medium      | Feature |
 | [#47](https://github.com/orhun/binsider/issues/47) | Human readable output for static analysis                                        | Easy        | Feature |
 | [#6](https://github.com/orhun/binsider/issues/6)   | Launch TUI from selected tab                                                     | Easy        | Feature |
+| [54](https://github.com/orhun/binsider/issues/54)  | Show the number of shared libraries                                              | Easy        | Feature |
 
 Research:
 
