docs(website): finish blog post

--- a/website/src/content/docs/blog/v0.2.0.md
+++ b/website/src/content/docs/blog/v0.2.0.md
@@ -73,7 +73,7 @@ I know y'all like Nix, so we have a Nix flake for `binsider` now! ❄️
 nix run "github:orhun/binsider"
 ```
 
-### As a library
+### `binsider` as a library
 
 `binsider` is now available as a Rust library if you want to integrate it into your TUI/Ratatui project!
 
@@ -115,7 +115,11 @@ The shared libraries in the [general analysis](/usage/general-analysis) are now 
 - _(flake)_ Fix test failure on Nix ([#30](https://github.com/orhun/binsider/pull/30))
 - _(test)_ Ensure that binary is built before the test runs ([#11](https://github.com/orhun/binsider/pull/11))
 
-## What's next?
+## Seeking contributors
+
+I'm looking for new contributors to help with the development and fixing bugs!
+
+Here is a list of issues that need attention:
 
 | Issue                                              | Title                                                                            | Importance  | Type    |
 | -------------------------------------------------- | -------------------------------------------------------------------------------- | ----------- | ------- |
@@ -130,14 +134,24 @@ The shared libraries in the [general analysis](/usage/general-analysis) are now 
 | [#6](https://github.com/orhun/binsider/issues/6)   | Launch TUI from selected tab                                                     | Easy        | Feature |
 | [54](https://github.com/orhun/binsider/issues/54)  | Show the number of shared libraries                                              | Easy        | Feature |
 
-Research:
+Also, if you are feeling like researching/brainstorming, here are some issues that needs some thought:
 
-| Issue Number                                       | Title                           |
+| Issue                                              | Title                           |
 | -------------------------------------------------- | ------------------------------- |
 | [#46](https://github.com/orhun/binsider/issues/46) | Support diffing binaries        |
 | [#26](https://github.com/orhun/binsider/issues/26) | Support more platforms via LIEF |
 | [#16](https://github.com/orhun/binsider/issues/16) | Binwalk/unblob                  |
 
-#### Reproducible builds
+Feel free to ask questions in issues or [the Discord server](#discord) - always happy to guide you through the code!
 
-#### Support the development
+## Reproducible builds
+
+Last week I had the chance to attend the [Reproducible Builds Summit](https://reproducible-builds.org/events/hamburg2024/) in Hamburg, Germany. A lot of topics has been discussed - `binsider` was one of them and I got some feedback/thoughts from people with different backgrounds.
+
+![reprobuilds](../../assets/blog/20240917_122011.jpg)
+
+One of the reoccurring ideas was to add [diffoscope](https://diffoscope.org/) support to `binsider` for comparing binaries. Leave a comment on [#46](https://github.com/orhun/binsider/issues/46) if you think that would be useful - I might start working on it in the upcoming weeks.
+
+## Support the development
+
+[Become a sponsor](https://github.com/sponsors/orhun) of my work 🖤 or simply [buy me a coffee](https://buymeacoffee.com/orhun) ☕
